changed the structure of the project

--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,12 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>com.test</groupId>
-    <artifactId>test-task</artifactId>
+    <groupId>com.tasksmanager</groupId>
+    <artifactId>tasksmanager-test</artifactId>
+    <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-
+    <name>tasksmanager-test Maven Webapp</name>
+    <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -17,7 +16,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>6.0.5</version>
+            <version>5.1.36</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -25,8 +24,8 @@
             <version>4.3.3.RELEASE</version>
         </dependency>
     </dependencies>
-
     <build>
+        <finalName>tasksmanager-test</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -39,5 +38,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
