--- a/pom.xml
+++ b/pom.xml
@@ -24,18 +24,12 @@
             <version>4.3.3.RELEASE</version>
         </dependency>
         </dependencies>
+
+    <properties>
+        <java.version>1.7</java.version>
+    </properties>
+
     <build>
         <finalName>tasksmanager-test</finalName>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.0</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-        </plugins>
     </build>
 </project>
