--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.tasksmanager</groupId>
-    <artifactId>tasksmanager-test</artifactId>
+    <artifactId>Tasks-Manager-SpringMVC-Hibernate</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>tasksmanager-test Maven Webapp</name>
+    <name>Tasks-Manager-SpringMVC-Hibernate</name>
     <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
